--- a/about.html
+++ b/about.html
@@ -1,21 +1,62 @@
-<div class="row row-cols-1 row-cols-md-2 g-4">
-  <div class="col">
-    <div class="card bg-secondary text-light h-100 border-info shadow-sm">
-      <div class="card-body">
-        <h5 class="card-title"><a href="https://github.com/Roberto-A-Cardenas/aws-nginx-terraform" class="text-warning">Secure Nginx on AWS</a></h5>
-        <p class="card-text">Provisioned EC2 with Nginx, IAM, and CloudWatch using Terraform.</p>
-      </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>About – Roberto A. Cardenas</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+</head>
+<body class="bg-dark text-light">
+
+<!-- ✅ Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-black border-bottom border-secondary">
+  <div class="container">
+    <a class="navbar-brand text-primary" href="index.html">R.A. Cardenas</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link text-info" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link text-info" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link text-info" href="contact.html">Contact</a></li>
+        <li class="nav-item"><a class="nav-link text-info" href="https://github.com/Roberto-A-Cardenas/Cloud-Portfolio" target="_blank">GitHub</a></li>
+        <li class="nav-item"><a class="nav-link text-info" href="https://github.com/Roberto-A-Cardenas/Cloud-Portfolio/blob/main/README.md" target="_blank">README</a></li>
+        <li class="nav-item">
+          <a class="btn btn-sm btn-outline-info ms-2" href="resume.pdf" target="_blank">
+            <i class="bi bi-download"></i> Resume
+          </a>
+        </li>
+      </ul>
     </div>
   </div>
+</nav>
 
-  <div class="col">
-    <div class="card bg-secondary text-light h-100 border-info shadow-sm">
-      <div class="card-body">
-        <h5 class="card-title"><a href="https://github.com/Roberto-A-Cardenas/scalable-web-app" class="text-warning">Scalable Web App</a></h5>
-        <p class="card-text">Flask app with Load Balancer and Auto Scaling Groups.</p>
-      </div>
-    </div>
-  </div>
+<!-- ✅ About Content -->
+<div class="container py-5">
+  <h1 class="text-primary mb-4">About Me</h1>
 
-  <!-- Repeat this pattern for each remaining project -->
+  <p>Hi, I'm <strong>Roberto A. Cardenas</strong> — an IT professional transitioning into Cloud Engineering with a strong foundation in finance and cybersecurity. I build secure, scalable cloud infrastructure on AWS using Terraform, Python, and automation pipelines.</p>
+
+  <p>My portfolio features real-world, hands-on projects that showcase skills in VPC design, CI/CD, serverless architecture, and monitored deployments. I enjoy solving infrastructure problems and implementing DevOps best practices.</p>
+
+  <p>My long-term goal is to fund and launch a nonprofit initiative while owning a ranch where I can continue building, learning, and helping others thrive in tech and beyond.</p>
+
+  <p>If you’re interested in collaboration, cloud automation, or tech-for-good projects — feel free to connect with me!</p>
 </div>
+
+<!-- ✅ Footer -->
+<footer class="bg-black text-center text-secondary py-4 mt-5 border-top border-secondary">
+  <div class="container">
+    <small>&copy; 2025 Roberto A. Cardenas &middot;
+      <a href="https://github.com/Roberto-A-Cardenas" class="text-info">GitHub</a> &middot;
+      <a href="https://www.linkedin.com/in/roberto-cardenas-940a8194/" class="text-info" target="_blank">LinkedIn</a>
+    </small>
+  </div>
+</footer>
+
+<!-- ✅ Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
