--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
 
   <p>My portfolio features real-world, hands-on projects that showcase skills in VPC design, CI/CD, serverless architecture, and monitored deployments. I enjoy solving infrastructure problems and implementing DevOps best practices.</p>
 
-  <p>My long-term goal is to fund and launch a nonprofit initiative while owning a ranch where I can continue building, learning, and helping others thrive in tech and beyond.</p>
+  <p>My long-term goal is to grow into a senior cloud engineer or DevOps lead role where I can architect scalable infrastructure, mentor junior engineers, and drive innovation on high-impact cloud projects that align with security, reliability, and automation best practices.</p>
 
   <p>If you’re interested in collaboration, cloud automation, or tech-for-good projects — feel free to connect with me!</p>
 </div>
