--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 <!-- ✅ Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-black border-bottom border-secondary">
   <div class="container">
-    <a class="navbar-brand text-primary" href="index.html">R.A. Cardenas</a>
+    <a class="navbar-brand text-primary" href="index.html">Roberto Alejandro. Cardenas</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
