--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,10 @@
 <!-- ✅ Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-black border-bottom border-secondary">
   <div class="container">
-    <a class="navbar-brand text-primary" href="index.html">Roberto Alejandro. Cardenas</a>
+    <a class="navbar-brand d-flex align-items-center gap-2 text-primary" href="index.html">
+  <img src="profile.jpg" alt="Profile" class="rounded-circle" width="32" height="32">
+  Roberto A. Cardenas
+</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
