--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
         <li class="nav-item"><a class="nav-link text-info" href="https://github.com/Roberto-A-Cardenas/Cloud-Portfolio" target="_blank">GitHub</a></li>
         <li class="nav-item"><a class="nav-link text-info" href="https://github.com/Roberto-A-Cardenas/Cloud-Portfolio/blob/main/README.md" target="_blank">README</a></li>
         <li class="nav-item">
-          <a class="btn btn-sm btn-outline-info ms-2" href="resume.pdf" target="_blank">
+          <a class="btn btn-sm btn-outline-info ms-2" href="RAC resume.pdf" target="_blank">
             <i class="bi bi-download"></i> Resume
           </a>
         </li>
